# redpanda

src/transform-sdk/cpp/: Dockerfile  build.sh
src/transform-sdk/js/: js_vm.cc  main.cc
src/v/cluster/: controller.cc  feature_manager.cc  feature_manager.h  metrics_reporter.cc  metrics_reporter.h  topic_table.cc
src/v/config/: BUILD  configuration.cc  configuration.h  convert.h  node_config.cc  node_config.h  node_overrides.h  property.h  rjson_serialization.cc  rjson_serialization.h
src/v/features/: feature_table.cc  feature_table.h
src/v/model/: namespace.h  transform.h
src/v/redpanda/: admin_server.h  application.cc  application.h  monitor_unsafe.h
src/v/security/: oidc_authenticator.cc  oidc_authenticator.h  oidc_service.cc  sasl_authentication.h
src/v/security/audit/: CMakeLists.txt  api.h  audit_log_manager.cc  audit_log_manager.h  fwd.h  msg.h  probe.cc  probe.h  rpc_sink.cc  rpc_sink.h
src/v/storage/: log_appender.h
src/v/transform/: CMakeLists.txt  api.cc  api.h  log_manager.cc  log_manager.h  logger.h
src/v/utils/: request_auth.cc  request_auth.h  uuid.cc
src/v/wasm/: api.h  logger.h  wasi.cc  wasi.h  wasmtime.cc
tests/: setup.py
tests/docker/ducktape-deps/: kafka-tools
tests/rptest/clients/: default.py  python_librdkafka.py  rpk.py
tests/rptest/scale_tests/: many_topics_test.py
tests/rptest/services/: keycloak.py  redpanda.py
tests/rptest/tests/: admin_uuid_operations_test.py  cloud_storage_props_warn_test.py  cluster_config_test.py  data_transforms_test.py  license_enforcement_test.py  random_node_operations_test.py  (+6 more)
(+39 files in other folders)
